--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-
+ 
 <!DOCTYPE  html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Nagateja Personal page</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 <body>
 	<table cellspacing="20">
