--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
-<body>
+<body background="download.png">
 	<table cellspacing="20">
 		<tr>
 			<td>
-			<img src="DSC_4447 copy-modified.png" alt="Nagateja Profile">	
+			<img src="DSC_4447 copy-modified.png" alt="Nagateja Profile">
 			</td>
 			<td>
 				<h1>Nagateja Ksheerasagar</h1>
@@ -26,9 +26,9 @@
 	<hr>
 	<h3>Education</h3>
 	<ul>
-		<li>B.Tech(Civil Engineering),GURUNANAK ENGINEERING COLLEGE </li>
+		<li>B.Tech(Civil Engineering) ,GURUNANAK ENGINEERING COLLEGE </li>
 		<li>Intermediate(M.P.C),SREE CHAITANYA JUNIOR COLLEGE</li>
-		<li>SSC,BABY MOON HIGH SCHOOL</li>
+		<li>SSC, BABY MOON HIGH SCHOOL</li>
 	</ul>
 	<h3>Hobbies</h3>
 	<ol start="1">
